Правит баг с подключением пристин

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
   </template>
 
   <!-- Скрипт(ы) -->
-  <script src="/pristine/pristine.min.js"></script>
+  <script src="pristine/pristine.min.js"></script>
   <script src="js/main.js" type="module"></script>
 
 </body>
