--- a/7/index.html
+++ b/7/index.html
@@ -231,7 +231,7 @@
   </template>
 
   <!-- Скрипт(ы) -->
-  <script src="/pristine/pristine.min.js"></script>
+  <script src="pristine/pristine.min.js"></script>
   <script src="js/main.js" type="module"></script>
 
 </body>
