:heavy_check_mark: Сборка #7

--- a/7/index.html
+++ b/7/index.html
@@ -88,7 +88,13 @@
         </fieldset>
         <fieldset class="ad-form__element ad-form__element--wide">
           <label class="ad-form__label" for="title">Заголовок объявления</label>
-          <input id="title" name="title" type="text" placeholder="Милая, уютная квартирка в центре Токио">
+          <input id="title" name="title" type="text" placeholder="Милая, уютная квартирка в центре Токио"
+            data-pristine-required
+            data-pristine-minlength="30"
+            data-pristine-maxlength="100"
+            data-pristine-required-message="Введите заголовок объявления"
+            data-pristine-minlength-message="Заголовок должен содержать не менее 30 символов"
+            data-pristine-maxlength-message="Заголовок должен содержать не более 100 символов">
         </fieldset>
         <fieldset class="ad-form__element ad-form__element--wide">
           <label class="ad-form__label" for="address">Адрес (координаты)</label>
@@ -106,7 +112,7 @@
         </fieldset>
         <fieldset class="ad-form__element">
           <label class="ad-form__label" for="price">Цена за ночь, руб.</label>
-          <input id="price" name="price" type="number" min="0" placeholder="5000">
+          <input id="price" name="price" type="number" min="0" placeholder="1000">
           <div class="ad-form__slider"></div>
         </fieldset>
         <fieldset class="ad-form__element ad-form__element--time">
